# ldk-node-hack-server

./: .gitignore  Cargo.toml  Dockerfile  build.rs  config.json  docker-compose.yml  docker-config.json  mutinynet-config.json  run-integration-tests.sh
.github/workflows/: build.yml
cli/: Cargo.toml  open_to_mutinynet_faucet.sh
cli/src/: main.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs
common/: Cargo.toml  build.rs
common/src/: error.rs  lib.rs
ldk-node-hack-server/: Cargo.toml
ldk-node-hack-server/src/: main.rs  protobuf_types.rs  service.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
protos/src/proto/: ldk_server_hack.proto
server/: Cargo.toml
server/src/: main.rs  service.rs
server/tests/: docker_compose.rs  test_service.rs
src/: config.rs  main.rs  protobuf_types.rs  service.rs  utils.rs
src/proto/: ldk_server_hack.proto
