[package]
name = "ldk-node-hack-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ldk-node = { git = "https://github.com/tnull/ldk-node-hack.git", branch = "main" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
