[package]
name = "ldk-node-hack-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.86"
ldk-node = { git = "https://github.com/tnull/ldk-node-hack.git", branch = "main" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
prost = "0.11.6"
protos = { path = "../protos" }

[dev-dependencies]
client = { path = "../client" }

[build-dependencies]
